Template1-AWS-Infrastructure-SAP-HANA.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "(0007) AWS Infrastructure Deployment for SAP HANA",
    "Parameters": {
        "VPCCIDR": {
            "Description": "CIDR Block for the VPC you are creating.",
            "Type": "String",
            "Default": "10.0.0.0/16",
            "AllowedPattern": "[a-zA-Z0-9]+\\..+"
        },
        "DMZCIDR": {
            "Description": "CIDR Block for the Public DMZ Subnet located in the new VPC.",
            "Type": "String",
            "Default": "10.0.2.0/24",
            "AllowedPattern": "[a-zA-Z0-9]+\\..+"
        },
        "PrivSubCIDR": {
            "Description": "CIDR Block for Private Subnet where SAP HANA will be deployed.",
            "Type": "String",
            "Default": "10.0.1.0/24",
            "AllowedPattern": "[a-zA-Z0-9]+\\..+"
        },
        "RemoteAccessCIDR": {
            "Description": "IP CIDR from which you are likely to RDP into the instance. You can add rules later by modifying the created security groups e.g. 54.32.98.160/32.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
        },
        "KeyName": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Description": "Name of an existing EC2 KeyPair. RDP instance will launch with this KeyPair."
        },
        "NATInstanceType": {
            "Description": "Amazon EC2 instance type for the NAT Instances.",
            "Type": "String",
            "Default": "t2.small",
            "AllowedValues": [
                "t2.small",
                "t2.medium"
            ]
        },
        "RDPInstanceType": {
            "Description": "Amazon EC2 instance type for the Remote Desktop Instance.",
            "Type": "String",
            "Default": "m4.large",
            "AllowedValues": [
                "m3.large",
                "m3.xlarge",
                "m4.large",
                "m4.xlarge"
            ]
        }
    },
    "Mappings": {
        "AWSAMIRegionMap": {
            "AMI": {
                "AWSNAT": "amzn-ami-vpc-nat-hvm-2018.03.0.20181116-x86_64-ebs",
                "WS2012R2": "Windows_Server-2012-R2_RTM-English-64Bit-Base-2019.07.12"
            },
            "ap-northeast-1": {
                "AWSNAT": "ami-00d29e4cb217ae06b",
                "WS2012R2": "ami-08c9069ebb691abd4"
            },
            "ap-northeast-2": {
                "AWSNAT": "ami-0d98591cbf9ef1ffd",
                "WS2012R2": "ami-0ffe7109456576e22"
            },
            "ap-south-1": {
                "AWSNAT": "ami-00b3aa8a93dd09c13",
                "WS2012R2": "ami-03d1bbb0fb080106a"
            },
            "ap-southeast-1": {
                "AWSNAT": "ami-01514bb1776d5c018",
                "WS2012R2": "ami-069532b1546ad2d5b"
            },
            "ap-southeast-2": {
                "AWSNAT": "ami-062c04ec46aecd204",
                "WS2012R2": "ami-0ea835af31584b7a9"
            },
            "eu-central-1": {
                "AWSNAT": "ami-06a5303d47fbd8c60",
                "WS2012R2": "ami-0e4465bd84605ed60"
            },
            "eu-west-1": {
                "AWSNAT": "ami-024107e3e3217a248",
                "WS2012R2": "ami-0a3b775d0b1587522"
            },
            "sa-east-1": {
                "AWSNAT": "ami-057f5d52ff7ae75ae",
                "WS2012R2": "ami-039a1df2bc73444c8"
            },
            "us-east-1": {
                "AWSNAT": "ami-00a9d4a05375b2763",
                "WS2012R2": "ami-0daee40e15682f8fa"
            },
            "us-east-2": {
                "AWSNAT": "ami-00b34bbb100d6cfa1",
                "WS2012R2": "ami-0ffd6b5326a02a1a9"
            },
            "us-west-1": {
                "AWSNAT": "ami-097ad469381034fa2",
                "WS2012R2": "ami-05dfef67219fd3817"
            },
            "us-west-2": {
                "AWSNAT": "ami-0b840e8a1ce4cdf15",
                "WS2012R2": "ami-05cf702a535de6430"
            }
        }
    },
    "Outputs": {
        "RDPServerEIP": {
            "Description": "RDP Server located in DMZ Subnet",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "RDP Server IP:",
                        {
                            "Fn::GetAtt": [
                                "RDPInstance",
                                "PublicIp"
                            ]
                        }
                    ]
                ]
            }
        },
        "NATInstanceEIP": {
            "Description": "NAT Instance located in DMZ Subnet",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "NAT Server IP:",
                        {
                            "Fn::GetAtt": [
                                "NATInstance",
                                "PublicIp"
                            ]
                        }
                    ]
                ]
            }
        },
        "EBSVolume": {
            "Description": "Volume allocated to RDP Instance for SAP HANA Media",
            "Value": {
                "Ref": "SoftwareDepotVol"
            }
        },
        "VPCID": {
            "Description": "VPC-ID of the newly created VPC",
            "Value": {
                "Ref": "VPC"
            }
        },
        "PublicSubnet": {
            "Description": "Subnet-ID of the Public or DMZ Subnet",
            "Value": {
                "Ref": "DMZSubnet"
            }
        },
        "PrivateSubnet": {
            "Description": "Subnet-ID of the Private or Subnet where HANA will be deployed",
            "Value": {
                "Ref": "HANASubnet"
            }
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCCIDR"
                },
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "SAP HANA"
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "HANASubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "PrivSubCIDR"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "HANA"
                    },
                    {
                        "Key": "Name",
                        "Value": "Private Subnet - HANA"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "DMZSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "DMZCIDR"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "NAT and RDP"
                    },
                    {
                        "Key": "Name",
                        "Value": "Public Subnet - HANA"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }
            }
        },
        "NATInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "NAT Instance (Public Subnet)"
                    }
                ],
                "InstanceType": {
                    "Ref": "NATInstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "NetworkInterfaces": [
                    {
                        "NetworkInterfaceId": {
                            "Ref": "NATInterface"
                        },
                        "DeviceIndex": "0"
                    }
                ],
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMIRegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "AWSNAT"
                    ]
                }
            }
        },
        "NATEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "NATInterface": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SubnetId": {
                    "Ref": "DMZSubnet"
                },
                "Description": "External interface for the NAT instance",
                "GroupSet": [
                    {
                        "Ref": "NATSecurityGroup"
                    }
                ],
                "SourceDestCheck": "false",
                "Tags": [
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "AssociateInterfaceNAT": {
            "Type": "AWS::EC2::EIPAssociation",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NATEIP",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "NATInterface"
                }
            }
        },
        "NATSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable internal access to the NAT device",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "VPCCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": {
                            "Ref": "VPCCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "PrivSubCIDR"
                        }
                    }
                ]
            }
        },
        "RDPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "RDP Instance security group",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3389",
                        "ToPort": "3389",
                        "CidrIp": {
                            "Ref": "RemoteAccessCIDR"
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1",
                        "ToPort": "65535",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "RDPEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "RDPInterface": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SubnetId": {
                    "Ref": "DMZSubnet"
                },
                "Description": "Interface for RDP Instance",
                "GroupSet": [
                    {
                        "Ref": "RDPSecurityGroup"
                    }
                ],
                "SourceDestCheck": "true",
                "Tags": [
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "AssociateRDPEIP": {
            "Type": "AWS::EC2::EIPAssociation",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "RDPEIP",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "RDPInterface"
                }
            }
        },
        "HANARouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "HANA"
                    }
                ]
            }
        },
        "DMZRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "NAT"
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "HanaRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "HANARouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId": {
                    "Ref": "NATInstance"
                }
            }
        },
        "PublicNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "HanaSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "HANASubnet"
                },
                "RouteTableId": {
                    "Ref": "HANARouteTable"
                }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "DMZSubnet"
                },
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                }
            }
        },
        "InboundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "0",
                    "To": "65535"
                }
            }
        },
        "OutBoundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "0",
                    "To": "65535"
                }
            }
        },
        "RDPInstanceRootRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Path": "/",
                "Policies": [
                    {
                        "PolicyName": "root",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "s3:*",
                                        "ec2:Describe*",
                                        "ec2:AttachNetworkInterface",
                                        "ec2:AttachVolume",
                                        "ec2:CreateTags",
                                        "ec2:CreateVolume",
                                        "ec2:DeleteVolume",
                                        "ec2:RunInstances",
                                        "ec2:StartInstances",
                                        "ec2:CreateSecurityGroup",
                                        "ec2:CreatePlacementGroup",
                                        "ec2:CreateSnapshot"
                                    ],
                                    "Resource": "*"
                                },
                                {
                                    "Action": [
                                        "sqs:*"
                                    ],
                                    "Effect": "Allow",
                                    "Resource": "*"
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "cloudformation:CreateStack",
                                        "cloudformation:DeleteStack",
                                        "cloudformation:DescribeStack",
                                        "cloudformation:EstimateTemplateCost",
                                        "cloudformation:ValidateTemplate",
                                        "cloudformation:DescribeStackEvents",
                                        "cloudformation:DescribeStackResource",
                                        "cloudformation:DescribeStackResources",
                                        "cloudformation:DescribeStacks"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "iam:CreateRole"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "iam:PutRolePolicy"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "iam:CreateInstanceProfile"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "iam:AddRoleToInstanceProfile"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "iam:PassRole"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:RevokeSecurityGroupEgress"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:AuthorizeSecurityGroupEgress"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:AuthorizeSecurityGroupIngress"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:CreateNetworkInterface"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                },
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:ModifyNetworkInterfaceAttribute"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "RDPProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "RDPInstanceRootRole"
                    }
                ]
            }
        },
        "SoftwareDepotVol": {
            "Type": "AWS::EC2::Volume",
            "Properties": {
                "Size": "20",
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "HANA Software Download Volume"
                    }
                ]
            }
        },
        "RDPInstance": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "config": {
                        "files": {
                            "C:\\Users\\Administrator\\SAP\\SAP_AWS_Helper.ps1": {
                                "source": "https://s3.amazonaws.com/aws-quickstart/quickstart-sap-b1/scripts/SAP_AWS_Helper.ps1"
                            },
                            "C:\\Users\\Administrator\\SAP\\SAP_HANA_Deploy.ps1": {
                                "source": "https://s3.amazonaws.com/aws-quickstart/quickstart-sap-b1/scripts/SAP_HANA_Deploy.ps1"
                            },
                            "C:\\Users\\Administrator\\SAP\\Generic\\Template2-Deploy-SAP-HANA.template": {
                                "source": "https://s3.amazonaws.com/aws-quickstart/quickstart-sap-b1/templates/Template2-Deploy-SAP-HANA.template"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "NetworkInterfaces": [
                    {
                        "NetworkInterfaceId": {
                            "Ref": "RDPInterface"
                        },
                        "DeviceIndex": "0"
                    }
                ],
                "KeyName": {
                    "Ref": "KeyName"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMIRegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "WS2012R2"
                    ]
                },
                "IamInstanceProfile": {
                    "Ref": "RDPProfile"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "RDP Instance (Public Subnet)"
                    }
                ],
                "InstanceType": {
                    "Ref": "RDPInstanceType"
                },
                "Volumes": [
                    {
                        "VolumeId": {
                            "Ref": "SoftwareDepotVol"
                        },
                        "Device": "/dev/sdb"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "<powershell>\n",
                                "Set-ExecutionPolicy RemoteSigned -Force \n",
                                "Start-Process -FilePath msiexec -ArgumentList /i,  \"http://sdk-for-net.amazonwebservices.com/latest/AWSToolsAndSDKForNet.msi\", /passive -wait \n",
                                "cfn-init.exe -v -s ",
                                {
                                    "Ref": "AWS::StackId"
                                },
                                " -r RDPInstance",
                                " --region ",
                                {
                                    "Ref": "AWS::Region"
                                },
                                "\n",
                                "$auto_parameters = \"C:\\Users\\Administrator\\SAP\\CustomParameters.ps1 \"\n",
                                "mkdir C:\\Users\\Administrator\\SAP\\Generic \n",
                                "echo '# This file is auto-generated.'",
                                ">>",
                                "$auto_parameters",
                                "\n",
                                "echo '# Input parameters for the SAP custom cloudfront script generator.'",
                                ">>",
                                "$auto_parameters",
                                "\n\n",
                                "echo '$VPCCIDR = \"",
                                {
                                    "Ref": "VPCCIDR"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$DMZCIDR = \"",
                                {
                                    "Ref": "DMZCIDR"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$PrivSubCIDR = \"",
                                {
                                    "Ref": "PrivSubCIDR"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$VPC = \"",
                                {
                                    "Ref": "VPC"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$DMZSubnet = \"",
                                {
                                    "Ref": "DMZSubnet"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$HANASubnet = \"",
                                {
                                    "Ref": "HANASubnet"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$SoftwareDepotVol = \"",
                                {
                                    "Ref": "SoftwareDepotVol"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$Region = \"",
                                {
                                    "Ref": "AWS::Region"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n",
                                "echo '$AvailabilityZone = \"",
                                {
                                    "Fn::Select": [
                                        0,
                                        {
                                            "Fn::GetAZs": ""
                                        }
                                    ]
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n\n\n",
                                "echo '$KeyName = \"",
                                {
                                    "Ref": "KeyName"
                                },
                                "\"'>>",
                                "$auto_parameters",
                                "\n\n\n",
                                "echo '# Generic cloudformation template file locations (single/multinode)'",
                                ">>",
                                "$auto_parameters",
                                "\n",
                                "echo '$GenericTemplateFile_MN = \"C:\\Users\\Administrator\\SAP\\Generic\\Template2-Deploy-SAP-HANA.template\"'",
                                ">>",
                                "$auto_parameters",
                                "\n",
                                "echo '$TemplateURL =\"https://s3.amazonaws.com/aws-quickstart/quickstart-sap-b1/templates/Template2-Deploy-SAP-HANA.template\"'",
                                ">>",
                                "$auto_parameters",
                                "\n",
                                "echo '$jreURL =\"https://s3.amazonaws.com/aws-quickstart/quickstart-sap-b1/media/jre-7u7-win-x64.zip\"'",
                                ">>",
                                "$auto_parameters",
                                "\n",
                                "</powershell>"
                            ]
                        ]
                    }
                }
            }
        }
    }
}
